# idbi-bank-hackathon

./: .env.example  .gitignore  .vercelignore  README.md  check_db.py  design.md  pyproject.toml  requirements.txt  test_api.py  vercel.json
backend/: __init__.py  llm_service.py  main.py
data_generation/: aa_bank_data.csv  applicants.csv  creditpulse.db  epfo_records.csv  generate.py  generate_logins.py  gst_records.csv  labels.csv  upi_transactions.csv  user_credentials.csv
docs/: PITCH_NOTES.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  config.js  i18n.js  index.css
frontend/src/components/: CreditCommittee.jsx  Navbar.jsx  RiskBadge.jsx  ScoreGauge.jsx  ScoreTrendChart.jsx  SharedOwnerCards.jsx  TimeMachineChart.jsx  Toast.jsx
frontend/src/components/landing/: BackedBySection.jsx  DeepDiveSection.jsx  FeaturesSection.jsx  Footer.jsx  HeroSection.jsx  InfoSection.jsx  Navbar.jsx  UseCasesSection.jsx
frontend/src/data/: logins.json
frontend/src/pages/: AdminPanel.jsx  ApplicantDetail.jsx  Dashboard.jsx  LandingPage.jsx  LoginPage.jsx  OwnerView.jsx  SignupPage.jsx
ml/: __init__.py  feature_engineering.py  features.csv  save_features.py  scoring_engine.py  train_model.py
ml/model_artifacts/: cv_metrics.json  feature_importances.csv  hyperparam_search.csv  model_metrics.csv  threshold.json  xgb_model.pkl  xgb_model.ubj
tests/: __init__.py  test_scoring.py
