[project]
name = "creditpulse"
version = "1.0.0"
description = "AI/ML-driven MSME Financial Health Card - IDBI Hackathon"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "xgboost==2.0.3",
    "joblib==1.4.2",
    "openai==1.35.3",
    "anthropic==0.28.0",
    "python-multipart==0.0.9",
    "google-generativeai>=0.7.0",
    "python-dotenv>=1.0.0",
]

# Dev/training-only — NOT installed by Vercel (uv sync --no-dev)
[dependency-groups]
dev = [
    "scipy==1.13.1",
    "matplotlib==3.9.0",
    "pytest==8.2.2",
]

[tool.vercel]
entrypoint = "backend.main:app"
